--- a/pages/index.css
+++ b/pages/index.css
@@ -1,10 +1,10 @@
-@import url(/vendor/normalize.css);
-@import url(/vendor/fonts.css);
-@import url(/blocks/page.css);
-@import url(/blocks/header.css);
-@import url(/blocks/main.css);
-@import url(/blocks/content.css);
-@import url(/blocks/footer.css);
+@import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/main.css);
+@import url(../blocks/content.css);
+@import url(../blocks/footer.css);
 
 @media screen and (max-width: 768px) {
   .header__logo {
