--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,7 +7,8 @@
 .footer__copyright {
   margin: 0px;
   margin-top: 92px;
-  margin-bottom: 24px;
+  /* margin-bottom: 24px; */
+  padding-bottom: 24px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
