--- a/pages/index.css
+++ b/pages/index.css
@@ -5,127 +5,5 @@
 @import url(../blocks/main.css);
 @import url(../blocks/content.css);
 @import url(../blocks/footer.css);
-
-@media screen and (max-width: 768px) {
-  .header__logo {
-    margin-top: 30px;
-    max-height: 66px;
-    height: 100%;
-  }
-
-  .header__title {
-    margin-top: 90px;
-    font-size: 75px;
-    line-height: 79px;
-
-    max-width: 530px;
-    width: 100%;
-  }
-
-  .header__subtitle {
-    margin-top: 25px;
-  }
-
-  .header__image {
-    margin-top: 30px;
-  }
-
-  .main__content {
-    margin-top: 90px;
-    padding-left: 24px;
-    padding-right: 24px;
-  }
-  .content__title {
-    margin: 0px;
-    font-size: 45px;
-    line-height: 49px;
-  }
-
-  .content__text-main {
-    margin: 0px;
-    margin-top: 50px;
-
-    font-size: 24px;
-    line-height: 34px;
-  }
-  .content__text-quote {
-    margin: 0px;
-
-    font-size: 24px;
-    line-height: 34px;
-  }
-
-  .content__text-final {
-    margin: 0px;
-    margin-top: 32px;
-  }
-
-  .footer__copyright {
-    margin: 0px;
-    margin-top: 88px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .header__logo {
-    margin-top: 20px;
-    max-width: 188px;
-    width: 100%;
-  }
-
-  .header__title {
-    margin-top: 50px;
-    font-size: 40px;
-    line-height: 44px;
-    max-width: 228px;
-    width: 100%;
-  }
-
-  .header__subtitle {
-    margin-top: 16px;
-
-    font-size: 16px;
-    line-height: 20px;
-
-    max-width: 288px;
-    width: 100%;
-  }
-
-  .header__image {
-    margin-top: 40px;
-  }
-
-  .main__content {
-    margin-top: 64px;
-    padding-left: 16px;
-    padding-right: 16px;
-  }
-
-  .content__title {
-    margin: 0px;
-    font-size: 32px;
-    line-height: 35px;
-  }
-
-  .content__text-main {
-    margin: 0px;
-    margin-top: 40px;
-
-    font-size: 24px;
-    line-height: 30px;
-  }
-
-  .content__text-quote {
-    margin-top: 10px;
-
-    font-size: 24px;
-    line-height: 34px;
-  }
-
-  .footer__copyright {
-    margin: 0px;
-    margin-top: 64px;
-    font-size: 14px;
-    line-height: 14px;
-  }
-}
+@import url(../blocks/768px.css);
+@import url(../blocks/320px.css);
