--- a/blocks/content.css
+++ b/blocks/content.css
@@ -63,3 +63,53 @@
   margin-left: 148px;
   text-align: left;
 }
+
+@media screen and (max-width: 768px) {
+  .content__title {
+    margin: 0px;
+    font-size: 45px;
+    line-height: 49px;
+  }
+
+  .content__text-main {
+    margin: 0px;
+    margin-top: 50px;
+
+    font-size: 24px;
+    line-height: 34px;
+  }
+  .content__text-quote {
+    margin: 0px;
+
+    font-size: 24px;
+    line-height: 34px;
+  }
+
+  .content__text-final {
+    margin: 0px;
+    margin-top: 32px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .content__title {
+    margin: 0px;
+    font-size: 32px;
+    line-height: 35px;
+  }
+
+  .content__text-main {
+    margin: 0px;
+    margin-top: 40px;
+
+    font-size: 24px;
+    line-height: 30px;
+  }
+
+  .content__text-quote {
+    margin-top: 10px;
+
+    font-size: 24px;
+    line-height: 34px;
+  }
+}
