--- a/blocks/header.css
+++ b/blocks/header.css
@@ -50,3 +50,58 @@
 
   margin-top: 64px;
 }
+
+@media screen and (max-width: 768px) {
+  .header__logo {
+    margin-top: 30px;
+    max-height: 66px;
+    height: 100%;
+  }
+
+  .header__title {
+    margin-top: 90px;
+    font-size: 75px;
+    line-height: 79px;
+
+    max-width: 530px;
+    width: 100%;
+  }
+
+  .header__subtitle {
+    margin-top: 25px;
+  }
+
+  .header__image {
+    margin-top: 30px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header__logo {
+    margin-top: 20px;
+    max-width: 188px;
+    width: 100%;
+  }
+
+  .header__title {
+    margin-top: 50px;
+    font-size: 40px;
+    line-height: 44px;
+    max-width: 228px;
+    width: 100%;
+  }
+
+  .header__subtitle {
+    margin-top: 16px;
+
+    font-size: 16px;
+    line-height: 20px;
+
+    max-width: 288px;
+    width: 100%;
+  }
+
+  .header__image {
+    margin-top: 40px;
+  }
+}
