--- a/blocks/main.css
+++ b/blocks/main.css
@@ -5,3 +5,18 @@
   display: flex;
   flex-direction: column;
 }
+@media screen and (max-width: 768px) {
+  .main__content {
+    margin-top: 90px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .main__content {
+    margin-top: 64px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
