--- a/pages/index.css
+++ b/pages/index.css
@@ -28,44 +28,39 @@
 }
 
 .content__place {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-areas:
-    "title title artist artist"
-    "img img p1 p1"
-    "img img p2 p2"
-    "button button . .";
-  column-gap: 40px;
-  row-gap: 48px;
-  padding-left: 151px;
-  padding-right: 145px;
-  padding-top: 92px;
+  display: flex;
+  flex-direction: column;
+  gap: 41px;
+  max-width: 984px;
+  margin: auto;
 }
 
-.content__place-1 {
+.content__place-container {
+  display: flex;
+  align-items: flex-end;
+  gap: 40px;
+}
+
+.content__place-image {
+  align-items: flex-start;
 }
 
 .content__place__title {
-  grid-area: title;
-  margin: 0px;
   font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
   color: #ffffff;
+  max-width: 460px;
+  margin: 0px;
 }
 
 .content__place__artist {
-  grid-area: artist;
-  align-self: end;
+  max-width: 456px;
 }
 
 .content__place__artist-url {
-  margin: 0px;
-  padding-bottom: 8px;
-
   font-family: "Inter";
   font-style: normal;
   font-weight: 400;
@@ -73,7 +68,6 @@
   line-height: 15px;
   letter-spacing: 0.12em;
   text-transform: uppercase;
-
   color: #aaaaaa;
 }
 
@@ -88,12 +82,9 @@
 }
 
 .content__place__image {
-  grid-area: img;
-  align-self: end;
 }
 
 .content__place__text-1 {
-  grid-area: p1;
   margin: 0px;
 
   font-family: "Inter";
@@ -101,12 +92,12 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 29px;
-
   color: #ffffff;
+  max-width: 484px;
+  margin-bottom: 26px;
 }
 
 .content__place__text-2 {
-  grid-area: p2;
   margin: 0px;
 
   font-family: "Inter";
@@ -114,12 +105,11 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 29px;
-
   color: #ffffff;
+  max-width: 484px;
 }
 
 .content__place__button {
-  grid-area: button;
   background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
@@ -160,91 +150,6 @@
     max-height: 264px;
     width: 100%;
     height: 100%;
-  }
-
-  /* aca empieza la seccion places */
-  .content__place {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-areas:
-      "title title artist artist"
-      "img img p1 p1"
-      "img img p2 p2"
-      "button button . .";
-    column-gap: 28px;
-    row-gap: 48px;
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 88px;
-  }
-
-  .content__place-1 {
-  }
-
-  .content__place__title {
-    font-size: 42px;
-    line-height: 46px;
-    align-self: end;
-  }
-
-  .content__place__artist {
-    grid-area: artist;
-  }
-
-  .content__place__artist-url {
-    font-size: 12px;
-    line-height: 15px;
-    letter-spacing: 0.12em;
-    text-transform: uppercase;
-  }
-
-  .content__place__artist-text {
-    font-size: 18px;
-    line-height: 22px;
-  }
-
-  .content__place__image {
-    grid-area: img;
-    align-self: end;
-    max-width: 340px;
-    max-height: 340px;
-    align-self: auto;
-  }
-
-  .content__place__text-1 {
-    font-size: 16px;
-    line-height: 26px;
-  }
-
-  .content__place__text-2 {
-    font-size: 16px;
-    line-height: 26px;
-  }
-
-  .content__place__button {
-    grid-area: button;
-    background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
-    border-radius: 4px;
-    max-width: 289px;
-    max-height: 48px;
-    width: 100%;
-    height: 100%;
-    padding: 13px 20px;
-    display: flex;
-    align-items: center;
-    box-sizing: border-box;
-  }
-
-  .content__place__button-text {
-    margin: 0px;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    color: #ffffff;
   }
 }
 
