--- a/blocks/content.css
+++ b/blocks/content.css
@@ -64,6 +64,176 @@
   text-align: left;
 }
 
+.content__gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  column-gap: 16px;
+  row-gap: 16px;
+  padding-top: 116px;
+  padding-left: 43px;
+  padding-right: 53px;
+}
+
+.content__gallery-image {
+  max-width: 284px;
+  max-height: 213px;
+  width: 100%;
+  height: 100%;
+}
+
+.content__places {
+  margin-top: 88px;
+}
+
+.content__place {
+  display: grid;
+  grid-template-columns: 460px auto;
+  grid-template-rows: auto 460px auto;
+  grid-template-areas: "title artist" "image paragraphs" "button paragraphs";
+  column-gap: 40px;
+  row-gap: 48px;
+  max-width: 984px;
+  margin: auto;
+  padding-bottom: 80px;
+}
+
+.content__place:last-child {
+  padding-bottom: 0;
+}
+
+.content__place-container {
+  display: flex;
+  align-items: flex-end;
+  gap: 40px;
+}
+
+.content__place__title {
+  grid-area: title;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  color: #ffffff;
+  max-width: 460px;
+  margin: 0px;
+}
+
+.content__place__artist {
+  grid-area: artist;
+  max-width: 456px;
+  align-self: end;
+}
+
+.content__place__image {
+  grid-area: image;
+  width: 100%;
+  object-fit: cover;
+  max-width: 460px;
+  max-height: 460px;
+  height: 100%;
+  width: 100%;
+}
+
+.content__place__image:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.5);
+  opacity: 50%;
+}
+
+.content__place__artist-url {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.12em;
+  text-transform: uppercase;
+  color: #aaaaaa;
+}
+
+.content__place__artist-text {
+  margin: 0px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #ffffff;
+}
+
+.content__place__text-1 {
+  margin: 0px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 29px;
+  color: #ffffff;
+  max-width: 484px;
+  margin-bottom: 26px;
+}
+
+.content__place__text-2 {
+  margin: 0px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 29px;
+  color: #ffffff;
+  max-width: 484px;
+  margin-bottom: 26px;
+}
+.content__place__text-3 {
+  margin: 0px;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 29px;
+  color: #ffffff;
+  max-width: 484px;
+}
+
+.content__place__button {
+  grid-area: button;
+  background: linear-gradient(90deg, #0278fe 0%, #003a7b 99.98%);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  max-width: 289px;
+  max-height: 48px;
+  width: 100%;
+  height: 100%;
+  padding: 13px 20px;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.content__place__button:hover {
+  background: linear-gradient(
+    90deg,
+    rgba(2, 120, 254, 0.25) 0%,
+    rgba(0, 58, 123, 0.25) 99.98%
+  );
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+}
+
+.content__place__button-text {
+  margin: 0px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #ffffff;
+}
+
 @media screen and (max-width: 768px) {
   .content__title {
     margin: 0px;
@@ -89,6 +259,44 @@
     margin: 0px;
     margin-top: 32px;
   }
+  .content__gallery {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    column-gap: 16px;
+    row-gap: 16px;
+    padding-top: 64px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+  .content__place {
+    padding: 0 24px;
+    grid-template-columns: 340px;
+    grid-template-rows: auto 340px auto;
+    grid-template-areas: "title artist" "image paragraphs" "button paragraphs";
+    padding-bottom: 72px;
+  }
+
+  .content__gallery-image {
+    max-width: 352px;
+    max-height: 264px;
+    width: 100%;
+    height: 100%;
+  }
+
+  .content__place__title {
+    font-size: 42px;
+    line-height: 46px;
+    align-self: end;
+  }
+
+  .content__place__image {
+    max-width: 340px;
+    max-height: 340px;
+    height: 100%;
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 320px) {
@@ -111,5 +319,48 @@
 
     font-size: 24px;
     line-height: 34px;
+  }
+
+  .content__gallery {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    column-gap: 16px;
+    row-gap: 12px;
+    padding-top: 38px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+
+  .content__gallery-image {
+    max-width: 288px;
+    max-height: 216px;
+    width: 100%;
+    height: 100%;
+  }
+
+  .content__place {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 50px;
+  }
+
+  .content__place__title {
+    font-size: 32px;
+    line-height: 35px;
+    align-self: center;
+  }
+
+  .content__place__button-text {
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  .content__place__image {
+    max-width: 320px;
+    max-height: 320px;
+    height: 100%;
+    width: 100%;
+    padding: 0px;
   }
 }
