--- a/blocks/content.css
+++ b/blocks/content.css
@@ -73,6 +73,7 @@
   padding-top: 116px;
   padding-left: 43px;
   padding-right: 53px;
+  padding-bottom: 88px;
 }
 
 .content__gallery-image {
@@ -80,10 +81,6 @@
   max-height: 213px;
   width: 100%;
   height: 100%;
-}
-
-.content__places {
-  margin-top: 88px;
 }
 
 .content__place {
